--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "mongoose": "^5.2.14",
+    "ng-drag-drop": "^5.0.0",
     "nodemon": "^1.18.4",
     "path": "^0.12.7"
   }
