--- a/angular-client/package.json
+++ b/angular-client/package.json
@@ -22,12 +22,9 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
-    "@material-ui/core": "^3.0.3",
-    "@material-ui/icons": "^3.0.1",
     "axios": "^0.18.0",
-    "body-parser": "^1.18.3",
     "core-js": "^2.5.4",
-    "path": "^0.12.7",
+    "ng-drag-drop": "^5.0.0",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
   },
